--- a/d-/index.html
+++ b/d-/index.html
@@ -976,52 +976,69 @@ display: table-row;
 </div> -->
 
 
-<div class=""></div>
 <div class="d-container-fluid">
     <div class="d-row">
         <div class="d-col-xs-4 d-text-align-c">
-             <i class="iconfont icon-shouye-copy"></i>
+          <div class="d-grid-link">
+              <i class="iconfont icon-shouye-copy"></i>
             <div class="d-txt-tips">首页</div>
             <span class="d-nav-badge">99</span>
+          </div>
+             
         </div>
         <div class="d-col-xs-4 d-text-align-c">
+          <div class="d-grid-link">
               <i class="iconfont icon-shezhi"></i>
-            <div class="d-txt-tips">设置</div>
+              <div class="d-txt-tips">设置</div>
+            </div>
         </div>
         <div class="d-col-xs-4 d-text-align-c">
+         <div class="d-grid-link">
             <i class="iconfont icon-gouwuche"></i>
             <div class="d-txt-tips">地图</div>
+            </div>
         </div>
         <div class="d-col-xs-4 d-text-align-c d-margin-t-10">
+         <div class="d-grid-link">
             <i class="iconfont icon-gouwuche"></i>
             <div class="d-txt-tips">日历</div>
+            </div>
         </div>
         <div class="d-col-xs-4 d-text-align-c d-margin-t-10">
+         <div class="d-grid-link">
              <i class="iconfont icon-gouwuche"></i>
             <div class="d-txt-tips">日期</div>
+            </div>
         </div>
         <div class="d-col-xs-4 d-text-align-c d-margin-t-10">
+         <div class="d-grid-link">
              <i class="iconfont icon-gouwuche"></i>
-            <div class="d-txt-tips">购物车</div>
+             <div class="d-txt-tips">购物车</div>
+             </div>
         </div>
         <div class="d-col-xs-4 d-text-align-c d-margin-t-10">
-            <img src="../icon/d-home.png" class="d-width-20">
+         <div class="d-grid-link">
+            <i class="iconfont icon-gouwuche"></i>
             <div class="d-txt-tips">发现</div>
+            </div>
         </div>
         <div class="d-col-xs-4 d-text-align-c d-margin-t-10">
-           <i class="iconfont icon-gouwuche"></i>
+         <div class="d-grid-link">
+            <i class="iconfont icon-gouwuche"></i>
             <div class="d-txt-tips ">视频</div>
+            </div>
         </div>
          <div class="d-col-xs-4 d-text-align-c d-margin-t-10">
+          <div class="d-grid-link">
             <i class="iconfont icon-gouwuche"></i>
             <div class="d-txt-tips">日期</div>
+            </div>
         </div>
     </div>
     </div>
     <p>ss</p>
     <p>ss</p>
-    <p>ss</p>
-    <p>ss</p>
+   
   <script type="text/javascript">
       var disalog_=document.getElementById('d-dialog');
       var close_1=document.getElementsByClassName('close');
@@ -1061,6 +1078,11 @@ display: table-row;
 
 // 第二种方式
 document.body.addEventListener('touchstart', function () {});  
+
+// var a=[1,2,3,4,5];
+// for (let i = a.length - 1; i >= 0; i--) {
+//     console.log(a[i]);
+// }
 
 
   </script>                
