--- a/index/activity.html
+++ b/index/activity.html
@@ -3,29 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-  <title>Document</title>
+  <title>活动列表页</title>
     <link rel="stylesheet" type="text/css" href="../d-/css/base.css">
    <link rel="stylesheet" type="text/css" href="../d-/css/iconfont.css">
 </head>
 <body>
   <header class="d-nav-btn d-nav-t">
     <i class="iconfont icon-return d-btn-nav-img"></i>
-   <!--  <span>返回</span>   -->
     <div class="d-flex d-flex-col-100 d-justify-content-c">
         <a class="d-header-inner d-flex-col-100 d-justify-content-c">
-           <button class="d-btn-nav-l">item</button>
-           <button class="d-btn-nav-r">item</button>
+           <button class="d-btn-nav-l d-padding-lr-10 d-nav-active">公益活动</button>
+           <button class="d-btn-nav-r d-padding-lr-10">公益众筹</button>
         </a> 
     </div>  
 </header>
-<!-- <div class="">
-  <p>1</p>
-   <p>1</p>
-
-</div> -->
-<ul class="d-list d-padding-lr-10" style="margin-top:43px">
-   <li>
-          <div class="d-row">
+<div style="margin-top:43px" class="d-text-align-c d-txt-info d-padding-10">选择地区(驻马店)</div>
+<ul class="" >
+   <li class="d-bg-f d-padding-10 d-margin-b-10 d-shadow-1">
+           <div class="d-row d-margin-b-5">
             <div class="d-col-xs-2 d-col-height-2">
                 <img src="../img/856829.jpg" class="d-cover">
             </div>
@@ -42,7 +37,7 @@
        </div>
         <div class="d-row">
            <p class="d-list-txt d-list-txt-clamp-2">哈哈就是看到的顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶大傻妞儿儿是看到的顶顶顶顶顶顶顶顶顶顶</p>
-            <div class="d-margin-t-10"><img src="../img/856829.jpg" class="d-flex-80"></div>
+            <div class="d-margin-t-5"><img src="../img/856829.jpg" class="d-flex-80"></div>
         </div>
         <div class="d-border-tb d-txt-info d-height-40 d-align-items-c d-font-12">
           <span class="d-padding-lr-10 d-border-r">点赞数</span>
@@ -50,9 +45,34 @@
           <span class="d-padding-lr-10 d-border-r">报名人数</span>
           <span class="d-padding-lr-10 ">活动时间</span>
         </div>
-   </li>
-   
-    
+   </li> 
+   <li class="d-bg-f d-padding-10 d-shadoow-1">
+           <div class="d-row d-margin-b-5">
+            <div class="d-col-xs-2 d-col-height-2">
+                <img src="../img/856829.jpg" class="d-cover">
+            </div>
+            <div class="d-col-xs-8 d-padding-l-10">
+               <h1>城不二</h1>
+               <div class="d-txt-info d-font-12 d-margin-t-5">
+                 <span>一周前|</span>
+                 <span>驻马店|</span>
+                 <span>收费活动</span>
+                 <span>100/人</span>
+            </div>
+          </div>
+          <div class="d-col-xs-2 d-txt-10 d-txt-info d-text-align-c d-b-radius-10 d-activity-state d-margin-t-5 ">报名中</div>
+       </div>
+        <div class="d-row">
+           <p class="d-list-txt d-list-txt-clamp-2">哈哈就是看到的顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶大傻妞儿儿是看到的顶顶顶顶顶顶顶顶顶顶</p>
+            <div class="d-margin-t-5"><img src="../img/856829.jpg" class="d-flex-80"></div>
+        </div>
+        <div class="d-border-tb d-txt-info d-height-40 d-align-items-c d-font-12">
+          <span class="d-padding-lr-10 d-border-r">点赞数</span>
+          <span class="d-padding-lr-10 d-border-r">评论数数</span>
+          <span class="d-padding-lr-10 d-border-r">报名人数</span>
+          <span class="d-padding-lr-10 ">活动时间</span>
+        </div>
+   </li> 
 </ul>
 
 <script src='./js/styl.js'></script>
