--- a/index/index.html
+++ b/index/index.html
@@ -224,7 +224,7 @@
   </div> 
   
  <div class="d-container-fluid d-padding-lr-10 d-bg-f d-margin-b-10 d-padding-t-10 d-shadow-1">
-     <p class="d-text-align-l d-rec ">服务事项推荐</p>
+     <p class="d-text-align-l d-rec d-margin-b-10 ">服务事项推荐</p>
      <ul class="d-list d-border-t ">
         <li class="d-border-b ">
            <div class="d-list-items">
@@ -303,14 +303,14 @@
 </div>
 
   <div class="d-container-fluid d-padding-lr-10 d-bg-f d-margin-b-10 d-padding-t-10 d-shadow-1">
-    <p class="d-text-align-l d-rec ">会员心情</p>
+    <p class="d-text-align-l d-rec d-margin-b-10">会员心情</p>
     <div class="d-placehold-wrap">
       <span style="background-image:url(http://placeholder.qiniudn.com/640x200)"></span>
     </div>
     <p class="d-txt-tips d-text-align-c d-padding-tb-10 d-txt-info"> 发布和查看更多心情</p>    
   </div>
    <div class="d-container-fluid d-padding-lr-10 d-bg-f d-margin-b-10 d-padding-t-10 d-shadow-1">
-    <p class="d-text-align-l d-rec ">最新资讯</p>
+    <p class="d-text-align-l d-rec d-margin-b-10">最新资讯</p>
     <ul class="d-list d-border-tb">
    <li class="d-border-b d-padding-tb-10">
             <p class=" d-list-txt d-txt-tips d-nowrap-2 d-margin-b-10 ">有些企业不赚钱就靠讲故事 这是有问题的有些企业不赚钱就靠讲故事 这是有问题的有些企业不赚钱就靠讲故事 这是有问题的</p>
