--- a/index/skills.html
+++ b/index/skills.html
@@ -15,18 +15,103 @@
   <div class="d-container-fluid d-bg-f d-padding-lr-10" style="margin-top:43px">
     <ul class="d-list d-border-t ">
        <li class="">
-        <div class="d-margin-b-5"><i class="iconfont icon-return"></i>爱心帮扶：</div>
+        <div class="d-margin-b-5 d-txt-sub"><i class="iconfont icon-return"></i>爱心帮扶：</div>
         <div class="container">
-          <div class="d-label-skill label-outlined">贫困助学</div>
-          <div class="d-label-skill label-outlined">老弱帮扶</div>
-          <div class="d-label-skill label-outlined">贫困助学</div>
-          <div class="d-label-skill label-outlined">贫困助学</div>
-          <div class="d-label-skill label-outlined">老弱帮扶</div>
-          <div class="d-label-skill label-outlined">贫困助学</div>
-          <div class="d-label-skill label-outlined">贫困助学</div>
-      
+          <div class="d-label-skill label-outlined d-position-r d-margin-r-5">贫困助学
+             <span class="d-label-skill-tag">hot</span>
+          </div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined">贫困助学</div>      
         </div>
-      </li>   
+      </li> 
+       <li class="">
+        <div class="d-margin-b-5 d-txt-sub"><i class="iconfont icon-return"></i>医疗看病：</div>
+        <div class="container">
+          <div class="d-label-skill label-outlined d-position-r d-margin-r-5">贫困助学
+             <span class="d-label-skill-tag">hot</span>
+          </div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined">贫困助学</div>      
+        </div>
+      </li>  
+       <li class="">
+        <div class="d-margin-b-5 d-txt-sub"><i class="iconfont icon-return"></i>资源关系：</div>
+        <div class="container">
+          <div class="d-label-skill label-outlined d-position-r d-margin-r-5">贫困助学
+             <span class="d-label-skill-tag">hot</span>
+          </div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined">贫困助学</div>      
+        </div>
+      </li>  
+       <li class="">
+        <div class="d-margin-b-5 d-txt-sub"><i class="iconfont icon-return"></i>上学择校：</div>
+        <div class="container">
+          <div class="d-label-skill label-outlined d-position-r d-margin-r-5">贫困助学
+             <span class="d-label-skill-tag">hot</span>
+          </div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined">贫困助学</div>      
+        </div>
+      </li>  
+       <li class="">
+        <div class="d-margin-b-5 d-txt-sub"><i class="iconfont icon-return"></i>汽车服务：</div>
+        <div class="container">
+          <div class="d-label-skill label-outlined d-position-r d-margin-r-5">贫困助学
+             <span class="d-label-skill-tag">hot</span>
+          </div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined">贫困助学</div>      
+        </div>
+      </li>  
+       <li class="">
+        <div class="d-margin-b-5 d-txt-sub"><i class="iconfont icon-return"></i>风水易经：</div>
+        <div class="container">
+          <div class="d-label-skill label-outlined d-position-r d-margin-r-5">贫困助学
+             <span class="d-label-skill-tag">hot</span>
+          </div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined">贫困助学</div>      
+        </div>
+      </li>    
+      <li class="">
+        <div class="d-margin-b-5 d-txt-sub"><i class="iconfont icon-return"></i>书画其他：</div>
+        <div class="container">
+          <div class="d-label-skill label-outlined d-position-r d-margin-r-5">贫困助学
+             <span class="d-label-skill-tag">hot</span>
+          </div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined ">老弱帮扶</div>
+          <div class="d-label-skill label-outlined ">贫困助学</div>
+          <div class="d-label-skill label-outlined">贫困助学</div>      
+        </div>
+      </li>    
       
   </ul>
   </div>
